--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
- <!-- Video Source -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Document</title>
+</head>
+<body>
+   <!-- Video Source -->
   <!-- https://www.pexels.com/video/aerial-view-of-beautiful-resort-2169880/ -->
   <section class="showcase">
     <header>
       <h2 class="logo">Travel</h2>
       <div class="toggle"></div>
     </header>
-    <video src="https://traversymedia.com/downloads/videos/explore.mp4" muted loop autoplay></video>
+    <video src="beach.mp4" muted loop autoplay></video>
     <div class="overlay"></div>
     <div class="text">
       <h2>Never Stop To </h2> 
@@ -31,3 +40,6 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </div>
+  <script src="js/script.js"></script>
+</body>
+</html>
